--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
     <body>
         <div class="i1">    
-            <a class="a1" href="">HOGWARTS</a>
+            <a class="a1" href="./hogwarts.html">HOGWARTS</a>
             <a href="" class="a2">THE FRIENDS</a>
         </div>
         <div class="i2"><img
