--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
     <body>
         <div class="i1">    
             <a class="a1" href="./hogwarts.html">HOGWARTS</a>
-            <a href="" class="a2">THE FRIENDS</a>
+            <a href="fr.html" class="a2">THE FRIENDS</a>
         </div>
         <div class="i2"><img
                 src="https://f14.photo.talk.zdn.vn/7600436085381097409/a8ec18c2fced08b351fc.jpg"
