--- a/fr.html
+++ b/fr.html
@@ -7,10 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-<div class="head">header</div>
-<div class="g">g</div>
-<div class="logo">logo</div>
-<div class="pic">w</div>
+<div class="head"><a href="./project.html"> <a href="">HOME</a> 
+    <a class="a1" href="./hogwarts.html">HOGWARTS</a>
+    <a href="./fr.html" class="a2">THE FRIENDS</a></a></div>
+<div class="g">__________________________________________________________________________________________________________________________________</div>
+<div class="logo"><img
+    src="https://f14.photo.talk.zdn.vn/7600436085381097409/a8ec18c2fced08b351fc.jpg"
+    alt=""></div>
+<div class="pic">ok</div>
 <div class="harry">q</div>
 <div class="hcont">hy</div>
 <div class="her">g</div>
