--- a/project.html
+++ b/project.html
@@ -10,9 +10,11 @@
     </head>
 
     <body>
-        <div class="i1">    
+        <div class="i1">   
+            <a href="">HOME</a> 
             <a class="a1" href="./hogwarts.html">HOGWARTS</a>
-            <a href="fr.html" class="a2">THE FRIENDS</a>
+            <a href="./fr.html" class="a2">THE FRIENDS</a>
+          
         </div>
         <div class="i2"><img
                 src="https://f14.photo.talk.zdn.vn/7600436085381097409/a8ec18c2fced08b351fc.jpg"
