--- a/fr.html
+++ b/fr.html
@@ -7,15 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-<div class="head"><a href="./project.html"> <a href="">HOME</a> 
-    <a class="a1" href="./hogwarts.html">HOGWARTS</a>
+<div class="head"> <a href="./project.html">HOME</a>
+    <a href="./hogwarts.html">HOGWARTS</a>
     <a href="./fr.html" class="a2">THE FRIENDS</a></a></div>
 <div class="g">__________________________________________________________________________________________________________________________________</div>
 <div class="logo"><img
     src="https://f14.photo.talk.zdn.vn/7600436085381097409/a8ec18c2fced08b351fc.jpg"
     alt=""></div>
-<div class="pic">ok</div>
-<div class="harry">q</div>
+<div class="pic"></div>
+<div class="harry"><img src="https://f14.photo.talk.zdn.vn/6706751905764817054/0ea9904476a382fddbb2.jpg" alt=""></div>
 <div class="hcont">hy</div>
 <div class="her">g</div>
 <div class="hecont">h</div>
