--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
     <body>
         <div class="i1">   
             <a href="">HOME</a> 
-            <a class="a1" href="./hogwarts.html">HOGWARTS</a>
+            <a href="./hogwarts.html">HOGWARTS</a>
             <a href="./fr.html" class="a2">THE FRIENDS</a>
           
         </div>
