add ron and change bgc

--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
           
         </div>
         <div class="i2"><img
-                src="https://f14.photo.talk.zdn.vn/7600436085381097409/a8ec18c2fced08b351fc.jpg"
+                src="https://f16.photo.talk.zdn.vn/7206133464135953219/79942e3395d9618738c8.jpg"
                 alt="">
         </div>
         <div class="i3">
@@ -31,7 +31,7 @@
         </div>
         <div class="i5"><img src="https://f9.photo.talk.zdn.vn/1923865291393266526/c35601c896e762b93bf6.jpg" alt=""></div>
     <div class="i6">Harry Potter is a series of seven fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic and subjugate all wizards and Muggles (non-magical people).</div>
-    <div class="i7">__________________________________________________________________________________________________________________________________</div>
+    <div class="i7"></div>
     </body>
 
     </html>
