--- a/hogwarts.html
+++ b/hogwarts.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="hogwarts.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="header "><a href="./project.html">HOME</a>
+        <a href="./hogwarts.html">HOGWARTS</a>
+        <a href="./fr.html" class="a2">THE FRIENDS</a></div>
+    <div class="logo "><img src="https://f16.photo.talk.zdn.vn/7206133464135953219/79942e3395d9618738c8.jpg" alt=""></div>
+    <div class="g "></div>
+    <div class="pic ">
+        <div class="p1">
+            <div class="p11">
+                <h6 class="p12">a</h6> <br>
+                <h3 class="p13"> Hufflepuff was one of the four Houses of Hogwarts School of Witchcraft and Wizardry. Its founder <br> was the medieval witch Helga Hufflepuff. Hufflepuff was the most inclusive among the four houses; <br> valuing hard work, dedication,
+                    patience, loyalty, and fair play rather than a particular aptitude in its <br> members. The emblematic animal was a badger, yellow and black were its house colours. The Head <br> of Hufflepuff was Pomona Sprout, and the Fat Friar was
+                    the House's patron ghost.</h3>
+            </div>
+
+        </div>
+    </div>
+    </div>
+    <div class="trophies ">trop</div>
+    <div class="k ">k</div>
+    <div class="c ">c</div>
+    <div class="cr ">cr</div>
+    <div class="n ">n</div>
+    <div class="r ">r</div>
+    <div class="footer ">footer</div>
 </body>
+
 </html>
