--- a/project.html
+++ b/project.html
@@ -1,38 +1,39 @@
-    <!DOCTYPE html>
-    <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-    <head> 
-        <link rel="stylesheet" href="project.css">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
+<head>
+    <link rel="stylesheet" href="project.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 
-    <body>
-        <div class="i1">   
-            <a href="">HOME</a> 
-            <a href="./hogwarts.html">HOGWARTS</a>
-            <a href="./fr.html" class="a2">THE FRIENDS</a>
-          
-        </div>
-        <div class="i2"><img
-                src="https://f16.photo.talk.zdn.vn/7206133464135953219/79942e3395d9618738c8.jpg"
-                alt="">
-        </div>
-        <div class="i3">
-            <div class="c1"> HARRY POTTER </div>
-            <div class="c2">"The boy who lived"
-            </div>
+<body>
+    <div class="i1">
+        <a href="">HOME</a>
+        <a href="./hogwarts.html">HOGWARTS</a>
+        <a href="./fr.html" class="a2">THE FRIENDS</a>
 
+    </div>
+    <div class="i2"><img src="https://f16.photo.talk.zdn.vn/7206133464135953219/79942e3395d9618738c8.jpg" alt="">
+    </div>
+    <div class="i3">
+        <div class="c1"> HARRY POTTER </div>
+        <div class="c2">"The boy who lived"
         </div>
-        <div class="i4">
-  
-        </div>
-        <div class="i5"><img src="https://f9.photo.talk.zdn.vn/1923865291393266526/c35601c896e762b93bf6.jpg" alt=""></div>
-    <div class="i6">Harry Potter is a series of seven fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic and subjugate all wizards and Muggles (non-magical people).</div>
-    <div class="i7"></div>
-    </body>
 
-    </html>
-    
+    </div>
+    <div class="i4">
+
+    </div>
+    <div class="i5"><img src="https://f9.photo.talk.zdn.vn/1923865291393266526/c35601c896e762b93bf6.jpg" alt=""></div>
+    <div class="i6">Harry Potter is a series of seven fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School
+        of Witchcraft and Wizardry. The main story arc concerns Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic and subjugate all wizards and Muggles
+        (non-magical people).</div>
+    <div class="i7">
+
+    </div>
+</body>
+
+</html>
