add gry and sly cont

--- a/hogwarts.html
+++ b/hogwarts.html
@@ -16,16 +16,24 @@
     <div class="logo "><img src="https://f16.photo.talk.zdn.vn/7206133464135953219/79942e3395d9618738c8.jpg" alt=""></div>
     <div class="g "></div>
     <div class="pic ">
-        <div class="p1">
-            <div class="p11">
-                <h6 class="p12">a</h6> <br>
-                <h3 class="p13"> Hufflepuff was one of the four Houses of Hogwarts School of Witchcraft and Wizardry. Its founder <br> was the medieval witch Helga Hufflepuff. Hufflepuff was the most inclusive among the four houses; <br> valuing hard work, dedication,
-                    patience, loyalty, and fair play rather than a particular aptitude in its <br> members. The emblematic animal was a badger, yellow and black were its house colours. The Head <br> of Hufflepuff was Pomona Sprout, and the Fat Friar was
-                    the House's patron ghost.</h3>
-            </div>
 
+        <div class="huf">
+            <h6 class="huf1">a</h6> <br>
+            <h3 class="hufcont"> Hufflepuff was one of the four Houses of Hogwarts School of Witchcraft and Wizardry. Its founder <br> was the medieval witch Helga Hufflepuff. Hufflepuff was the most inclusive among the four houses; <br> valuing hard work, dedication, patience,
+                loyalty, and fair play rather than a particular aptitude in its <br> members. The emblematic animal was a badger, yellow and black were its house colours. The Head <br> of Hufflepuff was Pomona Sprout</h3>
         </div>
-    </div>
+        <div class="sly">
+            <h3 class="slycont"> Slytherin is one of the four Houses at Hogwarts School of Witchcraft and Wizardry, founded<br> by Salazar Slytherin. In establishing the house, Salazar instructed the SortingHat to pick <br> students who had a few particular characteristics
+                he most valued. Those characteristics <br>include cunning, resourcefulness, leadership, and ambition. Many Slytherin students tend to <br> clique together, often acquiring leaders, which further exemplifies Slytherin's ambitious qualities</h3>
+            <h6 class="sly1">a</h6>
+        </div>
+        <div class="gry">
+            <h3 class="grycont">
+                Gryffindor is one of the four Houses of Hogwarts School of Witchcraft and Wizardry and was <br> founded by Godric Gryffindor. Gryffindor instructed the Sorting Hat to choose students <br> possessing characteristics he most valued, such
+                as courage, chivalry, and determination, to be <br> sorted into his house. The emblematic animal is a lion, and its colours are scarlet and gold.</h3>
+            <h6 class="gry1">a</h6>
+        </div>
+
     </div>
     <div class="trophies ">trop</div>
     <div class="k ">k</div>
