--- a/fr.html
+++ b/fr.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="head"> <a href="./project.html">HOME</a>
+    <div class="head"> <a href="./index.html">HOME</a>
         <a href="./hogwarts.html">HOGWARTS</a>
         <a href="./fr.html" class="a2">THE FRIENDS</a>
     </div>
