--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="i1">
-        <a href="">HOME</a>
+        <a href="./index.html">HOME</a>
         <a href="./hogwarts.html">HOGWARTS</a>
         <a href="./fr.html" class="a2">THE FRIENDS</a>
 
